# revu

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yaml  build_and_deploy.yaml  lint.yaml
.gitverse/workflows/: build.yaml  lint.yaml
config/: settings.yaml.example  settings.yaml.example_full
src/revu/: runner.py
src/revu/application/: app.py  config.py
src/revu/application/entities/: default_prompts.py
src/revu/application/entities/enums/: webhook_routes_enums.py  webhook_service_enums.py
src/revu/application/entities/exceptions/: ai_adapters_exceptions.py  http_gateway_exceptions.py  webhook_routes_exceptions.py  webhook_service_exceptions.py
src/revu/application/services/: statistics.py  webhook_service.py
src/revu/domain/entities/dto/: ai_provider_dto.py  pullrequest_dto.py
src/revu/domain/entities/enums/: pullrequest_enums.py
src/revu/domain/entities/exceptions/: git_provider_exceptions.py
src/revu/domain/protocols/: ai_provider_protocol.py  git_provider_protocol.py
src/revu/infrastructure/ai_providers/: base.py
src/revu/infrastructure/ai_providers/gigachat/: gigachat_adapter.py  gigachat_port.py
src/revu/infrastructure/ai_providers/openai/: openai_adapter.py  openai_port.py
src/revu/infrastructure/ai_providers/openai_compatible/: openai_compatible_adapter.py  openai_compatible_port.py
src/revu/infrastructure/ai_providers/yandexgpt/: yandexgpt_adapter.py  yandexgpt_port.py
src/revu/infrastructure/git_providers/bitbucket/: bitbucket_port.py  helpers.py
src/revu/infrastructure/git_providers/gitea/: gitea_port.py
src/revu/infrastructure/http_client/: http_client_gateway.py
src/revu/infrastructure/logger/: project_logger.py
src/revu/presentation/webhooks/: di.py  mappers.py  routes.py  schemas.py  validators.py
tests/: conftest.py
tests/application/: test_run_app.py
tests/domain/: test_ai_provider_dto.py
tests/fixtures/infrastructure_responses/: ai_responses.py
tests/fixtures/presentation_fixtures/: fake_request.py  payloads.py
tests/infrastructure/: test_http_client.py  test_project_logger.py
tests/infrastructure/ai_providers/: test_gigachat_adapter.py  test_gigachat_port.py  test_openai_adapter.py  test_openai_compatible_adapter.py  test_openai_compatible_port.py  test_openai_port.py  test_yandexgpt_adapter.py  test_yandexgpt_port.py
tests/infrastructure/git_providers/: test_gitea_port.py  test_github_port.py
tests/presentation/: test_di.py  test_mappers.py  test_schemas.py  test_validators.py
tests/unit/infrastructure/: test_project_logger.py
tests/unit/presentation/: test_di.py
(+3 files in other folders)
