[project]
name = "revu"
version = "1.1.1"
description = "Self-hosted AI code review for your Pull Requests."
authors = [
    { name = "proDream", email = "sushkoos@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dynaconf>=3.2.11",
    "fastapi[standard]>=0.118.0",
    "gigachat>=0.1.42.post2",
    "hatchling>=1.27.0",
    "httpx>=0.28.1",
    "openai>=2.0.1",
    "unidiff>=0.7.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/revu"]

[project.scripts]
app = "revu.runner:run"

[tool.ruff]
line-length = 120
indent-width = 4
