[project]
name = "revu"
version = "1.4.0"
description = "Self-hosted AI code review for your Pull Requests."
authors = [
    { name = "proDream", email = "sushkoos@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dynaconf>=3.2.11",
    "fastapi[standard]>=0.118.0",
    "gigachat>=0.1.42.post2",
    "hatchling>=1.27.0",
    "httpx>=0.28.1",
    "openai>=2.0.1",
    "unidiff>=0.7.5",
    "yandex-cloud-ml-sdk>=0.16.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/revu"]

[project.scripts]
app = "revu.runner:run"

[project.optional-dependencies]
pytest = [
    "coverage>=7.10.7",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=90"
]

testpaths = ["tests"]
markers = [
    "unit: Unit tests for domain logic",
    "integration: Integration tests for application layer",
]

asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
